# serial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: config.yml
cmake/: config.cmake.in
examples/: CMakeLists.txt  serial_example.cc
src/: CMakeLists.txt
